Hide page label on small mobile sizes, misc React fixes

--- a/svelte/modules/books/menuBar/menu-bar-styles.scss
+++ b/svelte/modules/books/menuBar/menu-bar-styles.scss
@@ -56,6 +56,9 @@
   }
 
   @media (max-width: 1000px) {
+    .page-label {
+      display: none;
+    }
     .page-edge {
       display: none;
     }
